# mem0

./: .env.example  .gitignore  Dockerfile  config.yaml  configure-gemini.sh  docker-compose.local.yml  docker-compose.yml  litellm-config.yaml  main.py  nginx.conf
.github/workflows/: docker.yml
dashboard/api/: Dockerfile  alembic.ini  pyproject.toml
dashboard/api/alembic/: env.py
dashboard/api/alembic/versions/: 001_initial.py
dashboard/api/app/: audit.py  config.py  main.py  middleware.py  models.py
dashboard/api/app/admin/: router.py  schemas.py  service.py
dashboard/api/app/analytics/: router.py  schemas.py  service.py
dashboard/api/app/apikeys/: router.py  schemas.py  service.py
dashboard/api/app/auth/: deps.py  router.py  schemas.py  service.py
dashboard/api/app/graph/: router.py  schemas.py  service.py
dashboard/api/app/mcp/: router.py  service.py
dashboard/api/app/memories/: router.py  schemas.py  service.py
dashboard/api/app/projects/: deps.py  router.py  schemas.py  service.py
dashboard/api/app/webhooks/: router.py  schemas.py  service.py  worker.py
dashboard/ui/: Dockerfile  next.config.ts  package-lock.json  package.json
dashboard/ui/src/app/: layout.tsx
dashboard/ui/src/components/: add-memory-dialog.tsx
dashboard/ui/src/hooks/: use-project.ts
dashboard/ui/src/lib/: api.ts  auth.ts  types.ts
init-db/: 01-create-dashboard-db.sql
k8s/: configmap.yaml  dashboard-api.yaml  dashboard-ui.yaml  ingress.yaml  litellm.yaml  mem0.yaml  namespace.yaml  neo4j.yaml  postgres.yaml  qdrant.yaml  secrets.yaml
(+26 files in other folders)
